[package]
name = "led-position-calibrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
eframe = { version = "0.24.0", features = ["persistence"] }
opencv = { version = "0.88.1", default-features = false, features = ["imgproc", "clang-runtime"] }
video-rs = "0.5.0"
